examples/test/testpolicy3972.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3972
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key39: value33
      key21: value21
      key36: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value29
      podSelector:
        matchLabels:
          key42: value45
          key19: value23
          key48: value2
